<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_layout"
    android:background="@drawable/start_session_2"
    android:orientation="vertical"
    android:padding="6px">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creat_cuenta"
        android:textColor="@color/text_color_white"
        android:textSize="30sp"
        android:layout_centerInParent="true"
        android:layout_above="@id/register_box"/>


    <include layout="@layout/register_box_layout"/>


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_box"
        android:layout_centerInParent="true">

        <TableRow>

            <Button
                android:id="@+id/btt_creat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creat"
                android:textColor="@color/text_color_white"
                android:layout_margin="6dp"/>

            <Button
                android:id="@+id/btt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/text_color_white"
                android:layout_margin="6dp"/>

        </TableRow>

    </TableLayout>


</RelativeLayout>